# NIFFLR

./: .gitmodules  Makefile  Makefile.am  README.md  configure.ac  find_path.py
src/: Makefile.am  add_read_counts.py  check_intron_chains.pl  compare_intron_chains.pl  configure.ac  count_junction_coverage.py  create_exon_fasta.py  delta_splitting.py  fastqToFasta.pl  fastqToFasta.py  filter_by_threshold.pl  filter_by_threshold.py  find_path.py  find_path_alt.py  find_path_old.py  fix_junctions.pl  generate_gtf.py  gffcompare  majority_vote.pl  majority_vote.py  niffler.sh  nifflr.sh  quantification.py  quantify.pl  refine-alignments.pl  trmap  wrapper_script.sh  wrapper_script.sh~
